@@ -32,16 +32,11 @@
 #include "event.h"
 #include "fuse.h"
 #include "machine.h"
-#include "machines/pentagon.h"
+#include "machines/machines.h"
 #include "machines/scorpion.h"
-#include "machines/spec16.h"
 #include "machines/spec48.h"
 #include "machines/spec128.h"
-#include "machines/specplus2.h"
-#include "machines/specplus2a.h"
 #include "machines/specplus3.h"
-#include "machines/tc2048.h"
-#include "machines/tc2068.h"
 #include "printer.h"
 #include "scld.h"
 #include "settings.h"
